--- a/src/app/features/post-login/issue-list/issue-list.component.html
+++ b/src/app/features/post-login/issue-list/issue-list.component.html
@@ -17,7 +17,7 @@
     <ng-template pTemplate="caption">
       <div class="table-header">
         <span class="p-input-icon-left">
-          <i class="fa-solid fa-search"></i>
+          <i class="bi bi-search"></i>
           <input
             pInputText
             type="text"
@@ -72,15 +72,15 @@
       <tr class="p-selectable-row">
         <td>
           <span class="p-column-title">Id</span>
-          {{ issue.id }}
+          {{ issue.issueId }}
         </td>
         <td>
           <span class="p-column-title">Tên văn bản</span>
-          {{ issue.docName }}
+          {{ issue.issueName }}
         </td>
         <td class="td-createdby">
           <span class="p-column-title">Người đăng</span>
-          {{ issue.createdBy }}
+          {{ issue.account.user.fullName }}
         </td>
         <td>
           <span class="p-column-title">Date</span>
@@ -92,7 +92,7 @@
         </td> -->
         <td>
           <span class="p-column-title">Số lượng BKTNB</span>
-          {{ issue.inspectorNum }}
+          {{ issue.inspectorGroupSize }}
         </td>
         <td
           style="text-align: center"
@@ -103,7 +103,7 @@
           >
             <i
               class="bi bi-info-circle-fill"
-              (click)="navigateToDetail(issue.id)"
+              (click)="navigateToDetail(issue.issueId)"
             ></i>
           </div>
           <div
@@ -111,7 +111,7 @@
           >
             <i
               class="bi bi-pencil-fill"
-              (click)="navigateToUpdate(issue.id)"
+              (click)="navigateToUpdate(issue.issueId)"
             ></i>
           </div>
         </td>
