--- a/src/app/features/post-login/issue-list/update-issue/update-issue.component.scss
+++ b/src/app/features/post-login/issue-list/update-issue/update-issue.component.scss
@@ -134,3 +134,12 @@ textarea {
     height: 540px;
     overflow: auto;
 }
+.input-file {
+    input {
+        width: 60%;
+        border-radius: 8px 0 0 8px;
+    }
+    button {
+        border-radius: 0 8px 8px 0;
+    }
+}
