--- a/src/app/features/post-login/issue-list/issue-detail/issue-detail.component.html
+++ b/src/app/features/post-login/issue-list/issue-detail/issue-detail.component.html
@@ -2,6 +2,16 @@
 <!-- {{ issue | json }} -->
 <h4>Chi tiết kế hoạch kiểm tra</h4>
 <br />
+<p-dialog
+  [(visible)]="pdfLoaded"
+  [style]="{ width: '80vw' }"
+  [draggable]="false"
+  [resizable]="false"
+>
+  <div *ngIf="pdfLoaded">
+    <iframe [src]="safePdfUrl" width="100%" height="600px"></iframe>
+  </div>
+</p-dialog>
 <div class="row" *ngIf="issue">
   <div class="row col-md-8">
     <div class="col-6 mb-5">
@@ -25,21 +35,31 @@
     <div class="mb-5">
       <h5 class="mb-3">Tài liệu công văn</h5>
       <ng-container *ngFor="let item of issue.documentDtos">
-        <div class="file-item p-3 mb-2 d-flex">
-          <div class="file-item-icon">
-            <i class="bi bi-file-earmark"></i>
-          </div>
-          <div class="file-item-content ps-3">
-            <p class="text-d">
-              {{ item.documentName }}<br />
-              {{ item.sizeFormat }}<br />
-              {{ item.uploadedDate | date : "MM/dd/yyyy" }}
-            </p>
-          </div>
-          <div class="mx-auto" *ngIf="item.status">
-            <p-tag class="status" severity="success" [rounded]="true">
-              {{ item.status.statusName }}
-            </p-tag>
+        <div
+          *ngIf="item.status.statusId == 1"
+          class="mb-2"
+          (click)="openNewTab(item.documentLink)"
+        >
+          <div class="file-item p-3 d-flex">
+            <div
+              class="file-item-icon d-flex justify-content-center align-items-center"
+            >
+              <i class="bi bi-file-earmark"></i>
+            </div>
+            <div class="file-item-content ps-3">
+              <p class="text-d ms-5">
+                {{ item.documentName }}<br />
+                {{ item.sizeFormat }}<br />
+                {{ item.uploadedDate | date : "MM/dd/yyyy" }}
+              </p>
+            </div>
+            <div
+              class="mx-auto d-flex justify-content-center align-items-center"
+            >
+              <p-tag class="status" [severity]="'success'" [rounded]="true">
+                {{ item.status.statusName }}
+              </p-tag>
+            </div>
           </div>
         </div>
       </ng-container>
@@ -51,40 +71,53 @@
         <h5 class="mx-auto">Danh sách thanh tra</h5>
         <div class="total">
           <span class="text-secondary mx-auto"
-            >Tổng số: {{ issue.inspector.length }}</span
+            >Tổng số: {{ issue.inspectors.length }}</span
           >
         </div>
       </div>
 
       <div class="card">
-        <ng-template pTemplate="header">Header Content</ng-template>
+        <!-- <ng-template pTemplate="header">Header Content</ng-template>
         <p-virtualScroller
           [value]="issue.inspector"
           class="border-1 surface-border border-round"
           scrollHeight="540px"
           [itemSize]="120"
-        >
-          <ng-template pTemplate="item" let-item>
-            <div class="scrollview-item d-flex p-3 ms-2 h-full">
-              <div
-                class="scrollview-item-icon d-flex justify-content-center align-items-center"
-              >
-                <i class="fa fa-user-circle" aria-hidden="true"></i>
-                <!-- <span class="index">{{
+          [numToleratedItems]="5"
+        > -->
+        <div class="overflow-auto">
+          <ng-container *ngFor="let item of issue.inspectors">
+            <div *ngIf="issue.inspectors" class="mb-2">
+              <div class="scrollview-item d-flex p-3 h-full">
+                <div
+                  class="scrollview-item-icon d-flex justify-content-center align-items-center"
+                >
+                  <i class="bi bi-person-circle"></i>
+                  <!-- <span class="index">{{
                   issue.inspector.indexOf(item) + 1
                 }}</span> -->
-              </div>
-              <div class="scrollview-item-content ms-4">
-                <span class="font-weight-bold">{{ item.name }}</span>
-                <br />
-                <span
-                  >{{ item.role }}<br />
-                  {{ item.school }}
-                </span>
+                </div>
+                <div class="scrollview-item-content ms-5">
+                  <span class="font-weight-bold">{{ item.user.fullName }}</span>
+                  <br />
+                  <span>
+                    {{ item.roles[0].roleName }}
+                    <br />
+                    {{ item.school.schoolName }}
+                  </span>
+                </div>
               </div>
             </div>
-          </ng-template>
-        </p-virtualScroller>
+          </ng-container>
+          <div
+            class="d-flex justify-content-center align-items-center p-error"
+            *ngIf="issue.inspectors.length == 0"
+          >
+            <h6>Danh sách ban kiểm tra không được để trống</h6>
+          </div>
+        </div>
+
+        <!-- </p-virtualScroller> -->
       </div>
     </div>
   </div>
