--- a/src/app/features/post-login/issue-list/update-issue/update-issue.component.html
+++ b/src/app/features/post-login/issue-list/update-issue/update-issue.component.html
@@ -125,7 +125,10 @@
       [itemSize]="100"
     >
       <ng-template pTemplate="item" let-item>
-        <div class="file-item p-3 d-flex">
+        <div
+          class="file-item p-3 d-flex"
+          (click)="openNewTab(item.documentLink)"
+        >
           <div
             class="file-item-icon d-flex justify-content-center align-items-center"
           >
@@ -201,7 +204,16 @@
     </div>
     <button type="button" pButton (click)="upload()">Lưu thay đổi</button>
   </p-dialog>
-
+  <p-dialog
+    [(visible)]="pdfLoaded"
+    [style]="{ width: '80vw' }"
+    [draggable]="false"
+    [resizable]="false"
+  >
+    <div *ngIf="pdfLoaded">
+      <iframe [src]="safePdfUrl" width="100%" height="500px"></iframe>
+    </div>
+  </p-dialog>
   <div class="col-md-8">
     <div class="mb-2 issue-name">
       <h6>Tên kế hoạch</h6>
@@ -247,7 +259,7 @@
         <div
           *ngIf="item.status.statusId == 1"
           class="mb-2"
-          (click)="openNewTab()"
+          (click)="openNewTab(item.documentLink)"
         >
           <div class="file-item p-3 d-flex">
             <div
@@ -321,7 +333,7 @@
         <div class="overflow-auto">
           <ng-container *ngFor="let item of issue.inspectors">
             <div *ngIf="issue.inspectors" class="mb-2">
-              <div class="scrollview-item d-flex p-3 ms-2 h-full">
+              <div class="scrollview-item d-flex p-3 h-full">
                 <div
                   class="scrollview-item-icon d-flex justify-content-center align-items-center"
                 >
@@ -330,7 +342,7 @@
                   issue.inspector.indexOf(item) + 1
                 }}</span> -->
                 </div>
-                <div class="scrollview-item-content ms-4">
+                <div class="scrollview-item-content ms-5">
                   <span class="font-weight-bold">{{ item.user.fullName }}</span>
                   <br />
                   <span>
