--- a/src/app/features/post-login/issue-list/update-issue/update-issue.component.scss
+++ b/src/app/features/post-login/issue-list/update-issue/update-issue.component.scss
@@ -75,10 +75,9 @@ textarea {
         width: 400px;
     }
     .file-item-icon {
-        i {
-            color: $primary;
-            font-size: 20px;
-            padding: 10px;
+        img {
+            width: 50px;
+            height: 50px;
         }
     }
     &:hover {
