--- a/src/app/features/post-login/issue-list/update-issue/update-issue.component.scss
+++ b/src/app/features/post-login/issue-list/update-issue/update-issue.component.scss
@@ -16,20 +16,13 @@ textarea {
 }
 .issue-content {
     font-size: 16px;
+    margin-left: 10px;
 }
 
 .scrollview-item {
     height: 100%;
-    border-radius: 10px;
-    // border: 0.8px solid $primary;
-    // box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 4px;
-    .scrollview-item-icon {
-        i {
-            color: $primary;
-            font-size: 40px;
-        }
-    }
     .trash-icon {
+        font-size: 40px;
         color: rgb(255, 86, 86);
         font-size: 25px;
         transition: all 0.5s ease;
@@ -38,26 +31,20 @@ textarea {
             color: rgb(240, 136, 136);
         }
     }
-    // .index {
-    //     color: $primary;
-    //     font-size: 30px;
-    // }
+    img {
+        width: 60px;
+        height: 60px;
+    }
     &:hover {
         background-color: $primary-hover;
         transition: all 0.5s ease;
+        border-radius: 10px;
+
         // cursor: pointer;
         color: #fff;
-        .scrollview-item-icon {
-            i {
-                color: #fff;
-            }
-        }
-        // .index {
-        //     color: #fff;
-        // }
     }
     .scrollview-item-content {
-        width: 300px;
+        width: 400px;
         font-size: 16px;
         .font-weight-bold {
             font-weight: bold;
@@ -65,14 +52,20 @@ textarea {
     }
 }
 .file-item {
-    height: 100px;
+    height: 90px;
     background-color: #f9fafb;
     // border: 0.8px solid rgb(169, 169, 169);
     border-radius: 10px;
     font-size: 16px;
     box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
     .file-item-content {
-        width: 400px;
+        width: 600px;
+        span {
+            max-width: 100%;
+            white-space: wrap; /* Prevent text from wrapping */
+            overflow: hidden; /* Hide overflowing text */
+            text-overflow: ellipsis; /* Display ellipsis for overflowing text */
+        }
     }
     .file-item-icon {
         img {
@@ -92,6 +85,11 @@ textarea {
         rgba(9, 30, 66, 0.25) 0px 1px 1px,
         rgba(9, 30, 66, 0.13) 0px 0px 1px 1px;
     font-size: 16px;
+    .list-inspector-header {
+        background-color: $primary;
+        color: #fff;
+        border-radius: 10px 10px 0 0;
+    }
 }
 .p-tag {
     padding: 20px;
@@ -130,7 +128,7 @@ textarea {
     }
 }
 .overflow-auto {
-    height: 540px;
+    height: 500px;
     overflow: auto;
 }
 .input-file {
@@ -141,4 +139,10 @@ textarea {
     button {
         border-radius: 0 8px 8px 0;
     }
+}
+.font-weight-bold {
+    font-weight: 500;
+}
+.font-size-18 {
+    font-size: 18px;
 }
