Seprate app module into smaller feature  module

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,6 +5,8 @@
 @import "primeng/resources/primeng.min.css";
 @import "node_modules/primeng/resources/themes/saga-blue/theme.css"; /* Replace with your preferred theme */
 
+@import "ag-grid-community/styles/ag-grid.css";
+@import "ag-grid-community/styles/ag-theme-alpine.css";
 //SCROLLBAR CSS
 /* width */
 ::-webkit-scrollbar {
