school initiation plan css

--- a/src/app/features/post-login/issue-list/issue-detail/issue-detail.component.html
+++ b/src/app/features/post-login/issue-list/issue-detail/issue-detail.component.html
@@ -36,9 +36,9 @@
           <div class="file-item-content">
             <div class="row ms-5">
               <div class="col-md-10">
-                <p class="font-weight-bold font-size-18">
+                <span class="font-weight-bold font-size-18">
                   {{ item.documentName }}.pdf
-                </p>
+                </span>
                 <br />
                 <span>
                   <span class="font-weight-bold">Loại TL:</span>
