--- a/src/styles.scss
+++ b/src/styles.scss
@@ -47,6 +47,11 @@
     background-color: #fffaeb;
     padding: 5px 20px;
 }
+.p-tag.p-tag-info {
+  color: #4176a8;
+  background-color: #d4e9fc;
+  padding: 5px 20px;
+}
 //
 
 $theme-colors: (
