--- a/src/app/features/post-login/school-initiation-plan/school-initiation-plan-detail/school-initiation-plan-detail.component.scss
+++ b/src/app/features/post-login/school-initiation-plan/school-initiation-plan-detail/school-initiation-plan-detail.component.scss
@@ -93,3 +93,6 @@ p {
 .font-weight-bold {
     font-weight: 500;
 }
+p-calendar.p-calendar-inline {
+    width: 300px; /* Adjust the width as needed */
+}
